complete progress on finish